--- a/package.json
+++ b/package.json
@@ -33,7 +33,9 @@
     "babel-register": "~6.22.0",
     "babel-runtime": "^6.22.0",
     "bootstrap": "^3.3.7",
+    "eslint": "^3.16.0",
     "express": "^4.14.1",
+    "leaflet": "^1.0.3",
     "leaflet.vectorgrid": "^1.2.0",
     "react": "~15.4.2",
     "react-dom": "~15.4.2",
@@ -41,7 +43,11 @@
   },
   "devDependencies": {
     "concurrently": "^3.1.0",
+    "copy-webpack-plugin": "^4.0.1",
     "css-loader": "^0.26.1",
+    "drmonty-leaflet-awesome-markers": "^2.0.2",
+    "eslint": "^3.16.0",
+    "eslint-plugin-react": "^6.10.0",
     "file-loader": "^0.10.0",
     "node-sass": "^4.5.0",
     "sass-loader": "^5.0.1",
