--- a/package.json
+++ b/package.json
@@ -59,6 +59,6 @@
     "sass-loader": "^5.0.1",
     "style-loader": "^0.13.1",
     "url-loader": "^0.5.7",
-    "webpack": "^2.2.1"
+    "webpack": "2.2.1"
   }
 }
